Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58179

Clicking on a text input doesn't scroll the view up anymore, on Android with highDPI scaling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.8.0
    • 5.7.1, 5.8.0 RC
    • QPA
    • None
    • Android, QML
    • Android
    • 88932d4339ea604a1bea8c09aef3945ac348df9c

      In 5.7 and earlier, focusing on a TextField showed the Android keyboard and scrolled the main QML view up in order to see the TextField beeing focused.

      In 5.8RC the view isn't scrolled anymore so the TextField is no visible while entering keys.

      I've reproduced this annoying behavior on Android but maybe the same happens on iOS...

      Edit : It works flawlessly on iOS

        1. AndroidPb.rar
          5 kB
          Alexandre GRANVAUD
        For Gerrit Dashboard: QTBUG-58179
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            AlGrenadine Alexandre GRANVAUD
            Votes:
            4 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes